# django_async

./: .gitignore  README.rst  article.md  article_sorted.md  async_in_devserver.md  commands.py  measure_tasks_memory.py  measure_tasks_memory_generator.py  measure_threads_memory.py  pyproject.toml  quotes.md  request_in_sync_view.md  setup.cfg  sources.md  uvicorn.md
de/: article.md
django_async/: asgi.py  async_views.py  settings.py  sync_views.py  urls.py  viewfinder.py  views.py  wsgi.py
notebooks/: async_middleware.ipynb  basic_async.ipynb  concurrent_requests.ipynb  get_all_views_from_module.ipynb  measure_memory_per_thread.ipynb  memory_per_async_task.ipynb  scrapbook.ipynb  wsgi_or_asgi.ipynb
