[tool.poetry]
name = "django-async-test"
version = "0.0.1"
description = "Just an async test"
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "BSD-4-Clause"
readme = "README.rst"
repository = "https://https://github.com/ephes/django_async"
packages = [
    { include = "./commands.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.1b1"
uvicorn = "^0.11.5"
httpx = "^0.13.3"
requests = "^2.24.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
typer = "^0.0.8"
jupyter = "^1.0.0"
ipdb = "^0.13.1"
coverage = "^5.0.3"
pytest = "^5.3.5"
factory_boy = "^2.12.0"
pytest-django = "^3.8.0"
tox = "^3.14.5"
django_extensions = "^2.2.8"

[tool.poetry.scripts]
test = "commands:test"
lint = "commands:flake8"
autoformat = "commands:black"
show_coverage = "commands:coverage"
notebook = "commands:notebook"
clean-build = "commands:clean_build"
clean-pyc = "commands:clean_pyc"
clean = "commands:clean"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
